# easy-http-request

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: get_my_ip.rs
src/: http_request_body.rs  http_request_error.rs  http_request_method.rs  http_request_options.rs  http_response.rs  lib.rs
tests/: basic.rs  redirect.rs
