[package]
name = "easy-http-request"
version = "0.2.6"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/easy-http-request"
homepage = "https://magiclen.org/easy-http-request"
keywords = ["http", "https", "request", "hyper"]
categories = ["web-programming::http-client"]
description= "Easy to send HTTP/HTTPS requests."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/easy-http-request"
branch = "master"

[dependencies]
url = "1"
hyper = "0.10"
hyper-native-tls = "0.3"
mime = "0.3"
slash-formatter = "2"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug", "Clone"]
default-features = false

[features]
nightly = []